!!! Removed `backface-visibility: hidden;` from thumbnails ... causing a lot of issues but keep and eye on this

--- a/framework/assets/css/themeblvd-rtl.css
+++ b/framework/assets/css/themeblvd-rtl.css
@@ -4948,7 +4948,10 @@ blockquote small {
 }
 .tb-thumb-link img,
 .tb-thumb-link .img {
+	/*
 	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	*/
 	-webkit-transition: opacity 0.25s ease;
 	transition: opacity 0.25s ease;
 }
